# Rust-Notes

./: .gitignore  Dockerfile.docs  Makefile  README.md  docker-compose.docs.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt
chapter_01/: section_01.md  section_02.md
chapter_01/codes/example_03/: Cargo.toml
chapter_01/codes/example_03/src/: main.rs
chapter_01/codes/example_04/src/: main.rs
chapter_01/codes/example_05/: Cargo.toml
chapter_01/codes/example_05/src/: main.rs
chapter_01/codes/example_08/src/: main.rs
docs/: index.md
docs/chapter_00/: section_01.md
docs/chapter_01/: section_00.md  section_03.md  section_04.md  section_05.md  section_06.md
docs/chapter_01/codes/example_00/: Cargo.toml
docs/chapter_01/codes/example_01/: Cargo.toml
docs/chapter_01/codes/example_04/: Cargo.toml
docs/chapter_01/codes/example_06/: Cargo.toml
docs/chapter_01/codes/example_06/src/: main.rs
docs/chapter_01/codes/example_07/: Cargo.toml
docs/chapter_01/codes/example_08/: Cargo.toml
docs/chapter_02/: section_00.md  section_01.md  section_02.md  section_03.md  section_04.md
docs/chapter_03/: section_00.md  section_01.md  section_02.md  section_03.md  section_04.md
docs/chapter_04/: section_00.md  section_01.md  section_02.md  section_03.md  section_04.md
docs/chapter_05/: section_00.md  section_01.md  section_02.md  section_03.md  section_04.md
docs/chapter_06/: section_00.md  section_01.md  section_02.md  section_03.md  section_04.md
src/video_player/: Cargo.toml  Makefile  README.md
src/video_player/src/: index.html  lib.rs
src/video_player2/: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile
src/video_player2/src/: index.html  main.rs
(+1 files in other folders)
